# Apex-Benchmarking

./: .gitignore  README.md  benchmark.py  config.yml  pyproject.toml  run.sh  scoreing.ipynb
scripts/: install.sh
utils/: bt_utils.py  dataset.py  logging.py
